# exploratory_computing_with_python

./: .gitignore  README.md  index.html  params.json  pyproject.toml  pythonjl_video1.ipynb
linearsystems/: bouwplaats_q3_notebook2.ipynb
notebook1/: py_exploratory_comp_1.ipynb  py_exploratory_comp_1_sol.ipynb  python_exploratory_computing_1.ipynb  python_from_skratch_1.ipynb
notebook1-4_test/: notebook1-4_test.ipynb  numbers2016.txt  schoolgrades2016.txt
notebook10_continuous_random_variables/: douglas_data.csv  py_exp_comp_s2.ipynb  py_exploratory_comp_10.ipynb  py_exploratory_comp_10_sol.ipynb
notebook11_hypothesis_test/: py_exploratory_comp_11.ipynb  py_exploratory_comp_11_sol.ipynb
notebook12_oop/: circle_data.txt  py_exploratory_comp_12.ipynb  py_exploratory_comp_12_sol.ipynb
notebook13_regression1/: py_exploratory_comp_13.ipynb  py_exploratory_comp_13_sol.ipynb
notebook1_basics_plotting/: clean_notebook.py  py_exploratory_comp_1.ipynb  py_exploratory_comp_1_sol.ipynb  py_exploratory_comp_test.ipynb  py_exploratory_comp_test_sol.ipynb
notebook2/: py_exploratory_comp_2.ipynb  py_exploratory_comp_2_sol.ipynb  py_exploratory_comp_3.ipynb  python_from_scratch_2.ipynb
notebook2_arrays/: py_exploratory_comp_2.ipynb  py_exploratory_comp_2_sol.ipynb
notebook3/: py_exploratory_comp_3.ipynb  py_exploratory_comp_3_sol.ipynb  python_from_scratch_3.ipynb
notebook3_for_and_if/: py_exploratory_comp_3.ipynb  py_exploratory_comp_3_sol.ipynb
notebook4/: py_exploratory_comp_4.ipynb  py_exploratory_comp_4_sol.ipynb
notebook5/: annual_precip.csv  test.csv  (+4 more)
(+65 files in other folders)
